Fix general overflow-y

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -2,6 +2,7 @@ html, body
   margin: 0 !important
   padding: 0 !important
   overflow-x: hidden
+  overflow-y: auto
 
   font-family: 'Hind', sans-serif
 
